buildscript {
	repositories {
		// buildscript의 의존성을 위한 저장소
		mavenCentral()
	}
}

plugins {
	id "java"
	id "org.springframework.boot" version "2.7.16"
	id "io.spring.dependency-management" version "1.1.4"
}

allprojects {
	// Java 버전 설정
	sourceCompatibility = "11"
	targetCompatibility = "11"

	repositories {
		// 필요한 라이브러리들을 받아올 원격 저장소
		mavenCentral()
	}
}

subprojects {
	apply plugin: "java"
	apply plugin: "org.springframework.boot"
	apply plugin: "io.spring.dependency-management"

	group = "com.aider"

	// 설정
	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
		asciidoctorExt
	}

	// 의존성 관리
	dependencies {
		implementation "org.springframework.boot:spring-boot-starter-data-jpa"
		implementation "org.springframework.boot:spring-boot-starter-web"

		// lombok
		implementation "org.projectlombok:lombok"
		annotationProcessor "org.projectlombok:lombok"
		testAnnotationProcessor "org.projectlombok:lombok"

		testImplementation "org.springframework.boot:spring-boot-starter-test"

		// Swagger
		implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
	}

	// 테스트 설정
	test {
		useJUnitPlatform()
	}

	// clean 설정
	clean {
		delete file('src/main/generated') // 인텔리제이 Annotation processor 생성물 생성위치
	}
}